# mattermost-sdbot

./: .dockerignore  .gitignore  Dockerfile  README.md  examples.py  requirements.txt  sdbot.py  setup.cfg  tests_sdbot.py
.github/workflows/: create-release.yml
