[metadata]
name = mattermost-sdbot
version = 0.1.0
author = Jakub Belescak
author_email = jakub.belescak@centrum.cz
description = Mattermost bot for creating and fetching images from Easy Diffusion UI (Stable Diffusion)
url = https://github.com/belda/mattermost-sdbot

[options]
packages = find:
install_requires =
    mattermostdriver
    requests
    websocket-client
    python-slugify

[options.entry_points]
console_scripts =
    mattermost-sdbot = sdbot:main
